# realtrans

./: .gitignore  PIPELINE.md  README-ZH.md  README.md  pipe_line_realchat.py  pipe_line_realtrans.py  pyproject.toml  requirements.txt
logs/: tts.out
models/: curl_translate.sh
static/: app.js  index.html  style.css
tests/: pipeline_all.py  test_aasr.py  test_asr.py  test_llm.py  test_translate.py  test_tts.py
